--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -5,7 +5,7 @@ layout: layouts/nested-page-layout.njk
 permalink: /404.html
 ---
 
-# Error 404
+# Oops
 This story does not exist or has been removed
 
 
