--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -6,6 +6,8 @@ permalink: /404.html
 ---
 
 # Oops
-This story does not exist or has been removed
+ 
+The ressource you are looking for is not available or might have been removed. 
+While you are here, check how to [better communicate error messages and feedbacks](/stories). 
 
 
