fix(SEO): :ambulance: remove error page from indexation

--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -1,13 +1,12 @@
 ---
 title: 404
-
 layout: layouts/nested-page-layout.njk
 permalink: /404.html
+eleventyExcludeFromCollections: true
 ---
 
 # Oops
  
 The ressource you are looking for is not available or might have been removed. 
-While you are here, check how to [better communicate error messages and feedbacks](/stories). 
-
+While you are here, check how to [better communicate error messages and feedbacks](/stories) or [return home ](/)
 
