--- a/src/content/404.md
+++ b/src/content/404.md
@@ -1,7 +1,7 @@
 ---
 title: 404
 layout: layouts/nested-page-layout.njk
-permalink: /404.html
+permalink: /404/
 eleventyExcludeFromCollections: true
 ---
 
