--- a/src/content/404.md
+++ b/src/content/404.md
@@ -8,5 +8,5 @@ eleventyExcludeFromCollections: true
 # Oops
  
 The ressource you are looking for is not available or might have been removed. 
-While you are here, check how to [better communicate error messages and feedbacks](/findings) or [return home ](/)
+While you are here, check how to [better communicate error messages and feedbacks](/findings/when-computers-apologize) or [return home ](/)
 
